tests/server/snapshots/convertor_test__server__rule_provider_test__test_rule_provider_clash_boslife_BosLife_force_remote_dns.snap
---
source: tests/server/rule_provider_test.rs
expression: actual
---
payload:
    - DOMAIN,lin.ee
    - DOMAIN-SUFFIX,line.me
    - DOMAIN-KEYWORD,line.naver.jp
    - DOMAIN-SUFFIX,line-apps.com
    - DOMAIN-KEYWORD,line-cdn.net
