tests/server/snapshots/convertor_test__server__rule_provider_test__test_rule_provider_clash_boslife_BosLife_no_resolve.snap
---
source: tests/server/rule_provider_test.rs
expression: actual
---
payload:
    - IP-CIDR,8.41.4.0/24
    - IP-CIDR,23.246.0.0/18
    - IP-CIDR,34.210.42.111/32
    - IP-CIDR,37.77.184.0/21
    - IP-CIDR,38.72.126.0/24
