tests/server/snapshots/convertor_test__server__rule_provider_test__test_rule_provider_clash_boslife_BosLife_policy.snap
---
source: tests/server/rule_provider_test.rs
expression: actual
---
payload:
    - PROCESS-NAME,Backup and Sync
    - USER-AGENT,%E7%BA%BD%E7%BA%A6%E6%97%B6%E6%8A%A5*
    - USER-AGENT,Argo*
    - DOMAIN-SUFFIX,boslife.io
    - DOMAIN-SUFFIX,boslife.net
    - DOMAIN-SUFFIX,wikibos.com
    - DOMAIN-SUFFIX,boswiki.net
