tests/server/snapshots/convertor_test__server__rule_provider_test__test_rule_provider_clash_boslife_DIRECT_no_resolve.snap
---
source: tests/server/rule_provider_test.rs
expression: actual
---
payload:
    - IP-CIDR,127.0.0.0/8
    - IP-CIDR,192.168.0.0/16
    - IP-CIDR,172.16.0.0/12
    - IP-CIDR,100.64.0.0/10
    - IP-CIDR,10.0.0.0/8
