tests/server/snapshots/convertor_test__server__rule_provider_test__test_rule_provider_clash_boslife_DIRECT_policy.snap
---
source: tests/server/rule_provider_test.rs
expression: actual
---
payload:
    - DOMAIN,trdy.subiway.com:8888
