tests/server/snapshots/convertor_test__server__rule_provider_test__test_rule_provider_surge_boslife_DIRECT_force_remote_dns.snap
---
source: tests/server/rule_provider_test.rs
expression: actual
---
// Disabled
#RULE-SET,https://cdn.jsdelivr.net/gh/Loyalsoldier/surge-rules@release/ruleset/proxy.txt,BosLife,force-remote-dns

// DIRECT,force-remote-dns
DOMAIN-SUFFIX,bppleman.com
